--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
 
 </head>
 <body>
+	<div id="page">
 
+	</div>
 
-		
+	            <h1>Crystal Collector</h1>
+
 				<h3 id="random">Choose the exact number: </h3>
 				<h1 id="randomNumber"></h1>
 		
 
 			<div id="buttonSection">
 
-				<button id="button-1" ><img src="./images/1.jpg" height="50px" id="icon1"></button>
+				<button id="button-1" ><img src="./images/1.jpg" height="120px" id="icon1"></button>
 
-				<button id="button-2" ><img src="./images/2.jpg" height="50px" id="icon2"></button>
+				<button id="button-2" ><img src="./images/2.jpg" height="120px" id="icon2"></button>
 
-				<button id="button-3" ><img src="./images/3.jpg" height="50px" ></button>
+				<button id="button-3" ><img src="./images/3.jpg" height="120px" ></button>
 
-				<button id="button-4"><img src="./images/4.jpg"  height="50px" ></button>
+				<button id="button-4"><img src="./images/4.jpg"  height="120px" ></button>
 
 			
 
